--- a/responsive.css
+++ b/responsive.css
@@ -5,14 +5,7 @@
         padding: 0;
     }
 
-    nav{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        top: 0;
-    }
-
-    .nav a {
+    .navbar li a {
         font-size: 13px;
         margin: 1px;
     }
